# uterra-qgis

./: .gitignore  README.md  __init__.py  classes.py  metadata.txt  permits.py  pyproject.toml  requirements.txt  uterra_plugin.py  uterra_plugin.ui
